--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-          <table class="table table-bordered" id="myTable">
+          <table class="table table-bordered table-striped" id="myTable">
             <tbody id="tableBody">
               <tr>
                 <td>
