show image when checkbox clicked

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   </head>
     
   <body> 
-      <div class="addContainer">
+      <div class="imageContainer" id="goodJob">
+        <img src="images/napolean.jpg" alt="good job image">
+      </div>
+
+      <div class="container" id="addContainer">
         <div class="input-group">
             <input type="text" id="textbox" class="form-control" placeholder="Enter new task here...">
             <span class="input-group-btn">
